fetchnui added to normal js ui boilerplate

--- a/ud-ui-template/html/index.html
+++ b/ud-ui-template/html/index.html
@@ -13,6 +13,7 @@
         </li>
     </ul>
     <button id="closeButton">Close</button>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/fetchNui.js"></script>
 </body>
 </html>
